# ct_img_segmentation

./: .gitignore  README.md  preprocess.ipynb  pyproject.toml  segment.ipynb
ct_img/: lib.py
src/ct_img/: lib.py
